fix spacing issue in theme cards

--- a/src/app/home/theme-list/theme-list.component.scss
+++ b/src/app/home/theme-list/theme-list.component.scss
@@ -28,3 +28,7 @@
     margin: 16px;
     width: 320px;
 }
+
+.theme-card-footer {
+  padding: 16px;
+}
